--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
 
-<body>
-  <canvas></canvas>
-  <script src="./script.js"></script>
-</body>
+  <body>
+    <canvas></canvas>
+    <script src="./script.js"></script>
+  </body>
 
 </html>
